# wtg-assistant-tauri

./: .gitignore  .npmrc  README-en.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
public/locales/: en.json  zh-Hans.json  zh-Hant.json
scripts/: build-macos-dmg.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  wtg-tauri.exe.manifest
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: benchmark.rs  disk.rs  macos_plugins.rs  mod.rs  partition.rs  system.rs  tools.rs  usb.rs  write.rs
src-tauri/src/models/: mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/platform/windows/: smart.rs
src-tauri/src/platform/windows/smart/: nvme.rs
src-tauri/src/services/: benchmark.rs  boot.rs  diskpart.rs  image.rs  mod.rs  vhd.rs  write.rs  write_macos.rs
src-tauri/src/utils/: command.rs  log.rs  macos_admin.rs  mod.rs  output_capture.rs  progress.rs  task_manager.rs
src/components/: Card.css  Card.tsx  Icons.tsx  Sidebar.css  Sidebar.tsx
src/hooks/: useDiskList.ts  usePartitionList.ts  useTheme.ts
src/locales/: en.json  zh-Hans.json  zh-Hant.json
src/pages/: Benchmark.css  Benchmark.tsx  Configure.css  Configure.tsx  Home.css  Home.tsx  Settings.css  Settings.tsx  Tools.css  Tools.tsx  Write.css  Write.tsx
src/services/: api.ts  i18n.ts  store.ts
src/styles/: fluent-colors.css  glass-morphism.css  globals.css
src/types/: index.ts
useable_software/: ntfs-mount.sh
wintogo/MultiLanguage/: ResourceLang.zh-Hant.resx
