[package]
name = "wtg-tauri"
version = "2.0.0"
description = "Windows To Go Assistant - Cross-platform utility"
authors = ["Micro-ATP"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
encoding_rs = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
num_cpus = "1.16"
sysinfo = "0.30"
lazy_static = "1.4"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
wmi = "0.13"
windows = { version = "0.54", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_Foundation"
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.8"
nix = { version = "0.27", features = ["ioctl", "mount"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "wtg-tauri"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
